sql/item.cc
@@ -4119,6 +4119,7 @@ Item_param::Item_param(THD *thd, const LEX_CSTRING *name_arg,
   */
   set_maybe_null();
   with_flags= with_flags | item_with_t::PARAM;
+  collation= DTCollation(&my_charset_bin, DERIVATION_IGNORABLE);
 }
 
 
@@ -4174,7 +4175,7 @@ void Item_param::sync_clones()
 }
 
 
-void Item_param::set_null()
+void Item_param::set_null(const DTCollation &c)
 {
   DBUG_ENTER("Item_param::set_null");
   /*
@@ -4189,6 +4190,7 @@ void Item_param::set_null()
   */
   max_length= 0;
   decimals= 0;
+  collation= c;
   state= NULL_VALUE;
   DBUG_VOID_RETURN;
 }
@@ -4447,7 +4449,7 @@ bool Item_param::set_from_item(THD *thd, Item *item)
     longlong val= item->val_int();
     if (item->null_value)
     {
-      set_null();
+      set_null(DTCollation_numeric());
       DBUG_RETURN(false);
     }
     else
@@ -4465,7 +4467,7 @@ bool Item_param::set_from_item(THD *thd, Item *item)
     DBUG_RETURN(set_value(thd, item, &tmp, h));
   }
   else
-    set_null();
+    set_null_string(item->collation);
 
   DBUG_RETURN(0);
 }
@@ -5048,7 +5050,7 @@ Item_param::set_value(THD *thd, sp_rcontext *ctx, Item **it)
   if (arg->save_in_value(thd, &tmp) ||
       set_value(thd, arg, &tmp, arg->type_handler()))
   {
-    set_null();
+    set_null_string(arg->collation);
     return false;
   }
   /* It is wrapper => other set_* shoud set null_value */
